@@ -13,20 +13,18 @@ class FfmpegExporter final : public VideoExporter
 	Q_OBJECT
 public:
 	explicit FfmpegExporter(
-		Format format, const QString &filename, const QString &customArguments,
-		QObject *parent = nullptr);
+		Format format, const QString &ffmpegPath, const QString &filename,
+		const QString &customArguments, QObject *parent = nullptr);
 
 	//! Get the arguments that are always given to the encoder process
 	static QStringList getCommonArguments(int fps);
 	static QStringList getDefaultMp4Arguments();
 	static QStringList getDefaultWebmArguments();
 
-	//! Try to see if ffmpeg is found and executable
-	static bool checkIsFfmpegAvailable();
-
 private slots:
 	void processError(QProcess::ProcessError error);
 	void bytesWritten(qint64 bytes);
+	void processFinished(int exitCode, QProcess::ExitStatus exitStatus);
 
 protected:
 	void initExporter() override;
@@ -35,6 +33,7 @@ protected:
 
 private:
 	Format m_format;
+	QString m_ffmpegPath;
 	QString m_filename;
 	QString m_customArguments;
 
