@@ -33,6 +33,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Make Erase, Divide and Subtract layer modes in ORA files compatible with Krita.
  * Feature: Stick ID alias and listing hosting options behind an advanced options checkbox, since they keep causing confusion.
  * Fix: Make host page in the start dialog work properly on Arabic and other right-to-left languages.
+ * Feature: Allow choosing ffmpeg path on Windows. Thanks xxxx for suggesting.
 
 2023-08-26 Version 2.2.0-beta.7
  * Fix: Make classic brushes not go brighter when smudging into transparency. Thanks to cada for reporting.
